Fist Education section added

--- a/Headers/education.html
+++ b/Headers/education.html
@@ -25,6 +25,8 @@
             </div>
             <p class="lead" data-pgc-field="page_description">This page contains the educational content for various knowledge levels.</p>
             <p class="lead"></p>
+			<p><a href="Education/ResearchPrep1/ResearchPrep1.html">Research Prep 1</a></p>
+			
             <p data-pgc-field="page_info">Content.</p>
         </div>
         <footer class="footer ml-auto">&nbsp; &nbsp; Copyright 2022 Thomas Moore.</footer>
